add changed in the register method

--- a/src/app/admin/components/card-front/card-front.component.html
+++ b/src/app/admin/components/card-front/card-front.component.html
@@ -16,7 +16,7 @@
       </figure>
     </div>
     <div class="pr-3 pt-4">
-      <p class="text-white text-right text-[0.6rem] font-medium md:text-lg md:font-semibold">MUTUAL CIRCULO DE SUBOFICIALES DE <br> GENDARMERIA NACIONAL ARGENTINA</p>
+      <p class="text-white text-right text-[0.6rem] font-medium md:text-sm md:font-semibold">MUTUAL CIRCULO DE SUBOFICIALES DE <br> GENDARMERIA NACIONAL ARGENTINA</p>
     </div>
   </div>
 
