--- a/src/app/admin/components/personal-date-credential/personal-date-credential.component.html
+++ b/src/app/admin/components/personal-date-credential/personal-date-credential.component.html
@@ -1,14 +1,11 @@
 <div class="flex justify-between items-center w-full px-2">
   <div class=" flex justify-start items-center w-3/4">
-    <figure routerLink="/auth/avatar-profile" class="w-auto pr-2 pb-2">
-      <div tabindex="0" role="button" class="w-22 h-22 btn btn-ghost btn-circle avatar">
+    <figure class="w-auto pr-2 pb-2">
+      <div tabindex="0" role="button" class="w-24 h-24 btn btn-ghost btn-circle avatar cursor-default">
         <div class=" rounded-full relative">
           <img
             alt="Tailwind CSS Navbar component"
             [src]="imagenUrl" *ngIf="imagenUrl" />
-        </div>
-        <div class="absolute bg-white shadow-sm shadow-gray-300 rounded-full p-[0.1rem] -bottom-[0.1rem] right-1">
-          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"><path fill="#0891B2" d="M16.293 2.293a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1 0 1.414l-13 13A1 1 0 0 1 8 21H4a1 1 0 0 1-1-1v-4a1 1 0 0 1 .293-.707l10-10zM14 7.414l-9 9V19h2.586l9-9zm4 1.172L19.586 7L17 4.414L15.414 6z"/></svg>
         </div>
       </div>
     </figure>
