--- a/src/app/admin/pages/credencial/credencial.component.html
+++ b/src/app/admin/pages/credencial/credencial.component.html
@@ -20,7 +20,7 @@
                   </figure>
                 </div>
                 <div class="pr-3 pt-4">
-                  <p class="text-white text-right text-[0.6rem] font-semibold md:text-lg md:font-semibold">CIRCULO DE SUBOFICIALES <br> GENDARMERIA NACIONAL</p>
+                  <p class="text-white text-right text-[0.6rem] font-semibold md:text-xs md:font-semibold">CIRCULO DE SUBOFICIALES <br> GENDARMERIA NACIONAL</p>
                 </div>
               </div>
               <div class="w-full ">
@@ -65,7 +65,7 @@
                        <img class="w-10" src="/cirsub.png" alt="">
                       </figure>
                       <div class="w-[40%]">
-                        <p class="text-white font-semibold text-right text-[0.5rem] md:text-lg md:font-semibold">CIRCULO DE SUBOFICIALES <br> GENDARMERIA NACIONAL</p>
+                        <p class="text-white font-semibold text-right text-[0.5rem] md:text-[0.5rem] md:font-semibold">CIRCULO DE SUBOFICIALES <br> GENDARMERIA NACIONAL</p>
                       </div>
                     </div>
                   </div>
