changed credential date and cbu update

--- a/src/app/admin/components/personal-date-credential/personal-date-credential.component.html
+++ b/src/app/admin/components/personal-date-credential/personal-date-credential.component.html
@@ -1,21 +1,34 @@
 <div class="flex justify-between items-center w-full px-2">
   <div class=" flex justify-start items-center w-3/4">
     <figure class="w-auto pr-2 pb-2">
-      <div tabindex="0" role="button" class="w-24 h-24 btn btn-ghost btn-circle avatar cursor-default">
-        <div class=" rounded-full relative">
-          <img
-            alt="Tailwind CSS Navbar component"
-            [src]="imagenUrl" *ngIf="imagenUrl" />
+  <div tabindex="0" role="button" class="w-24 h-24 btn btn-ghost btn-circle avatar cursor-default">
+    <div class="rounded-full relative w-24 h-24 overflow-hidden flex items-center justify-center bg-gray-100">
+      <!-- Spinner -->
+      <ng-container *ngIf="loading(); else content">
+        <div class="flex items-center justify-center w-full h-full">
+          <span class="w-8 h-8 border-4 border-gray-300 border-t-[#0891B2] rounded-full animate-spin"></span>
         </div>
-      </div>
-    </figure>
+      </ng-container>
+
+      <ng-template #content>
+        <!-- Imagen -->
+        <img *ngIf="hasImage()" [src]="imagenUrl" alt="Foto de perfil" class="w-full h-full object-cover" />
+
+        <!-- Placeholder si no hay imagen -->
+        <div *ngIf="!hasImage()" class="text-gray-400 text-xs">Sin imagen</div>
+      </ng-template>
+    </div>
+  </div>
+</figure>
     <div class="w-auto">
       <div>
         <ul class="block text-center">
-          <li class="w-full text-center font-semibold text-lg bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">{{ autService.user()?.Persona![0].Nombre!}} {{autService.user()?.Persona![0].Apellido}}</li>
+          <li class="w-full text-center font-semibold text-lg bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">{{ user()?.Persona![0].Nombre!}} {{user()?.Persona![0].Apellido}}</li>
           <li x-ms-format-detection="none"
           data-format-detection="false"
-          style="text-decoration: none;" class="text-sm font-semibold text-gray-500 no-underline"><span class=" font-semibold text-gray-500">DNI:</span> {{autService.user()?.Persona![0].Documento}}</li>
+          style="text-decoration: none;" class="text-[0.9rem] font-semibold text-gray-500 no-underline"><span class=" font-semibold text-gray-500">DNI:</span> {{autService.user()?.Persona![0].Documento}}</li>
+          <li class="text-[#0891B2]  text-[0.9rem] font-bold">{{ user()?.Personal![0].Tipo_Cargo_Detalle}}</li>
+          <!-- <li class="text-[#00C284] font-bold"></li> -->
         </ul>
       </div>
     </div>
