--- a/src/app/admin/pages/credencial/credencial.component.html
+++ b/src/app/admin/pages/credencial/credencial.component.html
@@ -1,5 +1,6 @@
 
-<div class="flex flex-col items-center justify-center mt-5 mb-10">
+<div class="overflow-hidden">
+  <div class="flex flex-col items-center justify-center mt-5 mb-10 transform scale-100 md:scale-150 lg:scale-150 origin-top-center md:mt-20 lg:mt-20 md:mb-30 lg:mb-30">
     <div class="[perspective:1000px]">
         <div class=" [transform-style:preserve-3d] transition-transform duration-800 rounded-xl shadow-md  w-86 h-60" [ngStyle]="cardRotationStyle">
             <div class="card-face card-front">
@@ -39,6 +40,9 @@
                     </div>
                     <div class="flex">
                       <div [routerLink]="['.', { outlets: { front: ['mensajes'] } }]" class="mr-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 24 24"><path fill="#00C284" d="M21 15.26a1 1 0 0 0-1 1v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9.67l5.88 5.89a3 3 0 0 0 2.1.87a3 3 0 0 0 1.43-.36a1 1 0 0 0 .4-1.36a1 1 0 0 0-1.36-.4a1 1 0 0 1-1.15-.17L5.41 8.26H12a1 1 0 0 0 0-2H5a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3v-3a1 1 0 0 0-1-1m0-12h-5a1 1 0 0 0-1 1v8a1 1 0 0 0 1.57.82l1.93-1.29l1.91 1.28a1.06 1.06 0 0 0 .59.19a1 1 0 0 0 .41-.09a1 1 0 0 0 .59-.91v-8a1 1 0 0 0-1-1m-1 7.12l-.94-.63a1 1 0 0 0-1.12 0l-.94.63V5.26h3Z"/></svg>
+                      </div>
+                      <div [routerLink]="['.', { outlets: { front: ['mensajes'] } }]" class="mr-2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 24 24"><path fill="#0891B2" d="M3 22q-.825 0-1.412-.587T1 20V7h2v13h15v2zm11-8.35l-7-4.1V16h14V9.55zM7 18q-.825 0-1.412-.587T5 16V7.5q0-.525.238-1t.712-.75L14 1l2 1.175L7.2 7.35l6.8 4l6.75-4q.375-.225.763-.212t.737.212t.55.538t.2.762V16q0 .825-.587 1.413T21 18zm7-8l-2.8-2.8l1.4-1.4L14 7.2l3.55-3.55l1.4 1.4zm0 6h7H7z"/></svg>
                       </div>
                       <div [routerLink]="['.', { outlets: { back: ['grupofamiliar'] } }]" (click)="flipCard('left')">
@@ -75,34 +79,46 @@
                   <router-outlet name="back"></router-outlet>
                 </div>
                 <div class="w-full flex justify-between items-start pr-3 pl-5 pb-3 mt-5" *ngIf="qrUrl">
-                  <div [routerLink]="['.', { outlets: { back: ['grupofamiliar'] } }]" class="flex flex-col items-center justify-center">
+                  <div [routerLink]="['.', { outlets: { back: ['grupofamiliar'] } }]" class="flex flex-col items-center justify-center cursor-pointer">
                     <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 24 24"><path fill="#0891B2" d="M18 6q-.825 0-1.412-.587T16 4t.588-1.412T18 2t1.413.588T20 4t-.587 1.413T18 6m-1 16V10.95h-1.825L16.5 7h3l3 9H20v6zm-4.5-10.5q-.625 0-1.062-.437T11 10t.438-1.062T12.5 8.5t1.063.438T14 10t-.437 1.063t-1.063.437M5.5 6q-.825 0-1.412-.587T3.5 4t.588-1.412T5.5 2t1.413.588T7.5 4t-.587 1.413T5.5 6m-2 16v-7H2V7h7v8H7.5v7zm7.5 0v-4h-1v-5.5h5V18h-1v4z"/></svg>
                     <p class="text-[0.5rem] text-center text-cyan-700 font-semibold">Grupo <br> familiar</p>
                   </div>
-                  <div [routerLink]="['.', { outlets: { back: ['farmacia'] } }]" class="flex flex-col items-center justify-center">
+                  <div [routerLink]="['.', { outlets: { back: ['farmacia'] } }]" class="flex flex-col items-center justify-center cursor-pointer">
                     <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 24 24"><path fill="#0891B2" d="M17 5v2a3 3 0 0 1 3 3v11a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V10a3 3 0 0 1 3-3V5zm-4 6h-2v2H9v2h1.999L11 17h2l-.001-2H15v-2h-2zm6-9v2H5V2z"/></svg>
                     <p class="text-[0.5rem] text-center text-cyan-700 font-semibold">Farmacia</p>
                   </div>
-                  <div [routerLink]="['.', { outlets: { back: ['estadia'] } }]" class="flex flex-col items-center justify-center">
+                  <div [routerLink]="['.', { outlets: { back: ['estadia'] } }]" class="flex flex-col items-center justify-center cursor-pointer">
                     <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 24 24"><path fill="#0891B2" d="M1 19V4h2v10h8V6h12v13h-2v-3H3v3zm6-6q-1.25 0-2.125-.875T4 10t.875-2.125T7 7t2.125.875T10 10t-.875 2.125T7 13m0-2q.425 0 .713-.288T8 10t-.288-.712T7 9t-.712.288T6 10t.288.713T7 11m0 0q-.425 0-.712-.288T6 10t.288-.712T7 9t.713.288T8 10t-.288.713T7 11"/></svg>
                     <p class="text-[0.5rem] text-center text-cyan-700 font-semibold">Evacuaciones</p>
                   </div>
-                  <div [routerLink]="['.', { outlets: { back: ['sepelio'] } }]" class="flex flex-col items-center justify-center">
+                  <div [routerLink]="['.', { outlets: { back: ['sepelio'] } }]" class="flex flex-col items-center justify-center cursor-pointer">
                     <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 16 16"><path fill="#0891B2" fill-rule="evenodd" d="M13.5 8a5.5 5.5 0 1 1-11 0a5.5 5.5 0 0 1 11 0M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0M8.054 4.502c-.708 0-1.34.18-1.811.558a1.95 1.95 0 0 0-.74 1.545c0 .764.474 1.265.94 1.559c.457.287 1.007.448 1.448.547c.462.102.844.191 1.119.341c.227.125.274.224.274.376c0 .102-.04.217-.248.341c-.224.135-.577.229-.982.229c-.344 0-.682-.114-.952-.29c-.282-.184-.42-.388-.457-.506a.75.75 0 1 0-1.43.452c.17.543.59 1 1.067 1.31a3.27 3.27 0 0 0 1.772.534c.602 0 1.24-.134 1.754-.443c.53-.319.976-.864.976-1.627c0-.864-.51-1.394-1.055-1.692c-.478-.26-1.056-.389-1.46-.478l-.053-.012c-.386-.086-.736-.202-.973-.352c-.227-.142-.24-.236-.24-.29a.45.45 0 0 1 .18-.375c.134-.108.403-.227.87-.227c.47 0 .742.11.9.218a.83.83 0 0 1 .316.41a.75.75 0 0 0 1.407-.52A2.33 2.33 0 0 0 9.8 4.98c-.455-.31-1.037-.478-1.745-.478" clip-rule="evenodd"/></svg>
                     <p class="text-[0.5rem] text-center text-cyan-700 font-semibold">Servicio de <br> sepelio</p>
                   </div>
-                  <div [routerLink]="['.', { outlets: { back: ['ahorros'] } }]" class="flex flex-col items-center justify-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 24 24"><g fill="none"><path fill="#0891B2" d="M21 8c0 1.02-1.186 1.92-3 2.462c-1.134.34-2.513.538-4 .538s-2.866-.199-4-.538C8.187 9.92 7 9.02 7 8c0-1.657 3.134-3 7-3s7 1.343 7 3"/><path stroke="#0891B2" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 8c0-1.657-3.134-3-7-3S7 6.343 7 8m14 0v4c0 1.02-1.186 1.92-3 2.462c-1.134.34-2.513.538-4 .538s-2.866-.199-4-.538C8.187 13.92 7 13.02 7 12V8m14 0c0 1.02-1.186 1.92-3 2.462c-1.134.34-2.513.538-4 .538s-2.866-.199-4-.538C8.187 9.92 7 9.02 7 8"/><path stroke="#0891B2" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12v4c0 1.02 1.187 1.92 3 2.462c1.134.34 2.513.538 4 .538s2.866-.199 4-.538c1.813-.542 3-1.442 3-2.462v-1M3 12c0-1.197 1.635-2.23 4-2.711M3 12c0 1.02 1.187 1.92 3 2.462c1.134.34 2.513.538 4 .538c.695 0 1.366-.043 2-.124"/></g></svg>
-                    <p class="text-[0.5rem] text-center text-cyan-700 font-semibold">Caja de <br> ahorros</p>
+                  <div [routerLink]="['.', { outlets: { back: ['cbu'] } }]" class="flex flex-col items-center justify-center cursor-pointer">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 16 16"><circle cx="8" cy="8" r="8" fill="#0891B2"/>
+                      <text
+                        x="8"
+                        y="10.5"
+                        text-anchor="middle"
+                        fill="white"
+                        font-size="5.5"
+                        font-weight="bold"
+                        font-family="Arial, sans-serif"
+                      >
+                        CBU
+                      </text>
+                    </svg>
+                    <p class="text-[0.5rem] text-center text-cyan-700 font-semibold">Actualización <br>de CBU</p>
                   </div>
-                  <div [routerLink]="['.', { outlets: { back: ['movimientos'] } }]" class="flex flex-col items-center justify-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 24 24"><path fill="#0891B2" d="M10.12 19.88a9.74 9.74 0 0 0 5.58-1.76a.26.26 0 0 1 .32 0l5 5.05a1.51 1.51 0 0 0 2.13-2.13l-5.05-5a.26.26 0 0 1 0-.32a9.74 9.74 0 1 0-8 4.18Zm1.32-8.2l-3.37-1.26A2.55 2.55 0 0 1 6.62 8a2.54 2.54 0 0 1 2.29-2.58a.24.24 0 0 0 .21-.25V4.5a1 1 0 0 1 2 0v.62a.26.26 0 0 0 .26.26h1.24a1 1 0 0 1 0 2H9.5c-.88 0-.88.43-.88.58a.9.9 0 0 0 .19.61l3.37 1.26a2.54 2.54 0 0 1 1.44 2.47a2.53 2.53 0 0 1-2.28 2.53a.25.25 0 0 0-.22.25v.67a1 1 0 0 1-2 0v-.63a.24.24 0 0 0-.24-.24H7.62a1 1 0 1 1 0-2h3.13c.87 0 .87-.44.87-.58a.93.93 0 0 0-.18-.62"/></svg>
-                    <p class="text-[0.5rem] text-center text-cyan-700 font-semibold">Extracto de <br>Movimientos</p>
+                  <div [routerLink]="['.', { outlets: { back: ['encuesta'] } }]" class="flex flex-col items-center justify-center cursor-pointer">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 24 24"><path fill="#0891B2" d="M6 4v4h12V4h2.007c.548 0 .993.445.993.993v16.014a.994.994 0 0 1-.993.993H3.993A.993.993 0 0 1 3 21.007V4.993C3 4.445 3.445 4 3.993 4zm3 13H7v2h2zm0-3H7v2h2zm0-3H7v2h2zm7-9v4H8V2z"/></svg>
+                    <p class="text-[0.5rem] text-center text-cyan-700 font-semibold">Encuesta</p>
                   </div>
 
 
 
-                  <div (click)="flipCard('left')">
+                  <div (click)="flipCard('left')" class="cursor-pointer">
                     <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 24 24"><path fill="#0891b2" d="M12 7C6.5 7 2 9.2 2 12c0 2.2 2.9 4.1 7 4.8V20l4-4l-4-4v2.7c-3.2-.6-5-1.9-5-2.7c0-1.1 3-3 8-3s8 1.9 8 3c0 .7-1.5 1.9-4 2.5v2.1c3.5-.8 6-2.5 6-4.6c0-2.8-4.5-5-10-5"/></svg>
                   </div>
 
@@ -110,7 +126,9 @@
             </div>
         </div>
     </div>
+  </div>
 </div>
+
 
 
 
