--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -23,6 +23,6 @@
   </nav>
   <p  class="text-teal-500 font-semibold">www.cirsubgn.org.ar</p>
   <aside>
-    <p class="text-gray-500">Departamento Informática del Círculo de Suboficiales de Gendaria Nacional Argentina</p>
+    <p class="text-gray-500">Departamento Informática del Círculo de Suboficiales de Gendarmeria Nacional Argentina</p>
   </aside>
 </footer>
