changed in the card

--- a/src/app/admin/components/notifications-oficiales/notifications-oficiales.component.html
+++ b/src/app/admin/components/notifications-oficiales/notifications-oficiales.component.html
@@ -1,11 +1,11 @@
 <div class="flex flex-col h-26 overflow-hidden mt-1 mb-2 mx-4">
-  <p class="text-center mb-2 text-[0.9rem] text-[#0891B2] font-semibold">Comunicaciones de Servicio</p>
+  <p class="text-center mb-2 text-[0.9rem] text-[#00BC7D] font-semibold">Comunicaciones Oficiales</p>
   <div class="overflow-y-auto flex-grow custom-scrollbar">
     <table class="min-w-full divide-y divide-gray-200">
       <thead class="bg-gray-50 sticky top-0 z-10">
         <tr>
           <th scope="col" class="px-3 py-1 text-left text-[0.6rem] font-medium text-gray-500 uppercase tracking-wider">
-            De
+            De:
           </th>
           <th scope="col" class="px-3 py-1 text-left text-[0.6rem] font-medium text-gray-500 uppercase tracking-wider">
             Asunto
@@ -62,3 +62,4 @@
 <!-- --- FIN MODAL DE MENSAJE --- -->
 
 <!-- El bloque <style> que tenías lo mantendremos en notifications.component.css -->
+
