--- a/src/app/admin/components/farmacia/farmacia.component.html
+++ b/src/app/admin/components/farmacia/farmacia.component.html
@@ -1,4 +1,4 @@
-<p class="text-xs text-cyan-700 font-semibold text-center mt-1">Reintegro de farmacia <span class="text-orange-700">2/6</span></p>
+<p class="text-xs text-cyan-700 font-semibold text-center mt-1">Reintegro de farmacia </p>
 <div class="flex flex-col h-24  overflow-hidden mx-1 mt-1 mb-2">
   <div class="overflow-y-auto flex-grow custom-scrollbar">
     <table class="min-w-full divide-y divide-gray-200">
