--- a/src/app/admin/components/notifications-oficiales/notifications-oficiales.component.html
+++ b/src/app/admin/components/notifications-oficiales/notifications-oficiales.component.html
@@ -1,11 +1,11 @@
 <div class="flex flex-col h-26 overflow-hidden mt-1 mb-2 mx-4">
-  <p class="text-center mb-2 text-[0.9rem] text-[#00BC7D] font-semibold">Comunicaciones Oficiales</p>
+  <p class="text-center mb-2 text-[0.8rem] text-[#00BC7D] font-semibold">COMUNICACIONES OFICIALES</p>
   <div class="overflow-y-auto flex-grow custom-scrollbar">
     <table class="min-w-full divide-y divide-gray-200">
       <thead class="bg-gray-50 sticky top-0 z-10">
         <tr>
           <th scope="col" class="px-3 py-1 text-left text-[0.6rem] font-medium text-gray-500 uppercase tracking-wider">
-            De:
+            De
           </th>
           <th scope="col" class="px-3 py-1 text-left text-[0.6rem] font-medium text-gray-500 uppercase tracking-wider">
             Asunto
@@ -18,9 +18,9 @@
       <tbody class="bg-white divide-y divide-gray-200">
         <!-- Agrega el evento (click) a la fila y cursor-pointer para mejor UX -->
         <tr *ngFor="let mensaje of mensajes" class="hover:bg-gray-50 cursor-pointer" (click)="openModal(mensaje)">
-          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-gray-900 w-[30%]">{{ mensaje.de }}</td>
-          <td class="px-3 py-2 text-[0.6rem] text-gray-600 w-[50%] max-w-[50%]">{{mensaje.asunto}}</td>
-          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-gray-500 w-[20%]">{{mensaje.fecha}}</td>
+          <td class="font-semibold px-3 py-2 whitespace-nowrap text-[0.7rem] text-gray-500 w-[30%]">{{ mensaje.de }}</td>
+          <td class="font-semibold px-3 py-2 text-[0.7rem] text-gray-500 w-[50%] max-w-[50%]">{{mensaje.asunto}}</td>
+          <td class="font-semibold px-3 py-2 whitespace-nowrap text-[0.7rem] text-gray-500 w-[20%]">{{mensaje.fecha}}</td>
         </tr>
       </tbody>
     </table>
@@ -40,20 +40,22 @@
 
     <!-- Contenido del Mensaje -->
     <div class="text-sm text-gray-700 mb-4 max-h-28 overflow-y-auto custom-scrollbar-modal">
-      <p class="mb-1">
+      <p class="mb-1 text-xs">
         <span class="font-semibold">Asunto:</span> {{ selectedMessage?.asunto }}
       </p>
-      <p class="mb-1">
+      <p class="mb-1 text-xs">
         <span class="font-semibold">Fecha:</span> {{ selectedMessage?.fecha }}
       </p>
-      <p>
-        <span class="font-semibold"></span> {{ selectedMessage?.mensaje }}
+      <p class="text-xs">
+        <span class="font-semibold"></span> Estimado/a socio/a <span class="text-teal-600 font-semibold">{{ this.authService.user()!.Persona[0].Nombre}} {{ this.authService.user()!.Persona[0].Apellido}}</span> , es un honor contar con su presencia en nuestra institución. A partir de hoy, ponemos a su disposición una nueva herramienta: la credencial digital.
+        Con ella podremos mantener una comunicación permanente con usted y avanzar hacia una administración más transparente, ágil y cercana.
+        ¡Gracias por acompañarnos en este nuevo paso!
       </p>
     </div>
 
     <!-- Pie del Modal -->
     <div class="flex justify-end">
-      <button (click)="closeModal()" class="px-4 py-1 bg-teal-500 text-white rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 text-sm">
+      <button (click)="closeModal()" class="cursor-pointer px-4 py-1 bg-teal-500 text-white rounded hover:bg-teal-600 focus:outline-none focus:ring-2 focus:ring-teal-500 focus:ring-opacity-50 text-sm">
         Cerrar
       </button>
     </div>
