--- a/src/app/admin/components/sepelio/sepelio.component.html
+++ b/src/app/admin/components/sepelio/sepelio.component.html
@@ -1,6 +1,34 @@
 
-  <div class="max-h-28 min-h-28 flex flex-col justify-center items-center mt-2">
-    <p class="text-gray-400">Usted no se encuentra adherido a este servicio.</p>
-    <p class="text-gray-400">¿Desea adherirse?</p>
-    <button class="button bg-teal-500 px-2 py-2 rounded-2xl text-white mt-4">Adherirme</button>
+ <p class="text-[0.7rem] text-cyan-700 font-semibold text-center mt-1">Seguros</p>
+<div class="flex flex-col h-24  overflow-hidden mx-4 mt-1 mb-2">
+  <div class="overflow-y-auto flex-grow custom-scrollbar">
+    <table class="min-w-full divide-y divide-gray-200">
+      <thead class="bg-gray-50 sticky top-0 z-10">
+        <tr>
+          <th scope="col" class="px-3 py-2 text-left font-semibold text-[0.5rem] text-gray-500 uppercase tracking-wider">
+            ORDEN
+          </th>
+          <th scope="col" class="px-3 py-2 text-left font-semibold text-[0.5rem] text-gray-500 uppercase tracking-wider">
+            DETALLE
+          </th>
+
+          <th scope="col" class="px-3 py-2 text-left font-semibold text-[0.5rem] text-gray-500 uppercase tracking-wider">
+            ESTADO
+          </th>
+        </tr>
+      </thead>
+      <tbody class="bg-white divide-y divide-gray-200 mb-2">
+        <tr *ngIf="user()?.Beneficios![0].SeguroVida > 0" class="hover:bg-gray-50">
+          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-cyan-600 font-semibold w-[5%]">#</td>
+          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-gray-500 w-[30%]">Seguro de vida</td>
+          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem]  w-[10%]"><p class="bg-green-600 text-center px-1 rounded-2xl text-white">Contratado</p></td>
+        </tr>
+        <tr *ngIf="user()?.Beneficios![0].SeguroSepelio > 0" class="hover:bg-gray-50">
+          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-cyan-600 font-semibold w-[5%]">#</td>
+          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-gray-500 w-[30%]">Seguro de sepelio></td>
+          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem]   w-[10%] "><p class="bg-green-600 text-center px-1 rounded-2xl text-white">Contratado</p></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
+</div>
