--- a/src/app/admin/components/personal-date-credential/personal-date-credential.component.html
+++ b/src/app/admin/components/personal-date-credential/personal-date-credential.component.html
@@ -27,7 +27,7 @@
           <li x-ms-format-detection="none"
           data-format-detection="false"
           style="text-decoration: none;" class="text-[0.9rem] font-semibold text-gray-500 no-underline"><span class=" font-semibold text-gray-500">DNI:</span> {{autService.user()?.Persona![0].Documento}}</li>
-          <li class="text-[#0891B2]  text-[0.9rem] font-bold">{{ user()?.Personal![0].Tipo_Cargo_Detalle}}</li>
+          <li class="text-[#0891B2]  text-[0.9rem] font-bold"></li>
           <!-- <li class="text-[#00C284] font-bold"></li> -->
         </ul>
       </div>
