--- a/src/app/admin/components/farmacia/farmacia.component.html
+++ b/src/app/admin/components/farmacia/farmacia.component.html
@@ -8,22 +8,22 @@
       <table class="min-w-full divide-y divide-gray-200">
         <thead class="bg-gray-50 sticky top-0 z-10">
           <tr>
-            <th scope="col" class="px-3 py-2 text-center font-semibold text-[0.3rem] text-gray-500 uppercase tracking-wider">
+            <th scope="col" class="px-1 py-2 text-center font-semibold text-[0.3rem]  w-[20%] text-gray-500 uppercase tracking-wider">
               ORDEN DE PAGO
             </th>
-            <th scope="col" class="px-3 py-2 text-center font-semibold text-[0.3rem] text-gray-500 uppercase tracking-wider">
+            <th scope="col" class="px-1 py-2 text-center font-semibold text-[0.3rem]  w-[30%] text-gray-500 uppercase tracking-wider">
               FECHA DE CARGA RECETA
             </th>
-            <th scope="col" class="px-3 py-2 text-center font-semibold text-[0.3rem] text-gray-500 uppercase tracking-wider">
+            <th scope="col" class="px-1 py-2 text-center font-semibold text-[0.3rem]  w-[30%] text-gray-500 uppercase tracking-wider">
               DESCRIPCION
             </th>
-            <th scope="col" class="px-3 py-2 text-center font-semibold text-[0.3rem] text-gray-500 uppercase tracking-wider">
+            <th scope="col" class="px-1 py-2 text-center font-semibold text-[0.3rem]  w-[10%] text-gray-500 uppercase tracking-wider">
               ESTADO
             </th>
-            <th scope="col" class="px-3 py-2 text-center font-semibold text-[0.3rem] text-gray-500 uppercase tracking-wider">
+            <th scope="col" class="px-1 py-2 text-center font-semibold text-[0.3rem]  w-[10%] text-gray-500 uppercase tracking-wider">
               IMPORTE
             </th>
-            <th scope="col" class="px-3 py-2 text-left font-semibold text-[0.3rem] text-gray-500 uppercase tracking-wider">
+            <th scope="col" class="px-1 py-2 text-left font-semibold text-[0.3rem]  w-[20%] text-gray-500 uppercase tracking-wider">
               FECHA DE PAGO
             </th>
 
@@ -31,12 +31,12 @@
         </thead>
         <tbody class="bg-white divide-y divide-gray-200">
           <tr *ngFor="let item of reintegro" class="hover:bg-gray-50">
-            <td class="px-3 py-2 whitespace-nowrap text-[0.4rem] text-cyan-600 font-semibold w-[30%]">{{ item.OrdenPago }}</td>
-            <td class="px-3 py-2 whitespace-nowrap text-[0.4rem] text-gray-500 w-[10%]">{{item.FechaCargaReceta}}</td>
-            <td class="px-3 py-2 whitespace-nowrap text-[0.4rem] text-gray-500 w-[20%]">{{item.DescripcionReintegro}}</td>
-            <td class="px-3 py-2 whitespace-nowrap text-[0.4rem] text-gray-500 w-[10%]">{{item.Op_estado}}</td>
-            <td class="px-3 py-2 whitespace-nowrap text-[0.4rem] text-gray-500 w-[10%]">$ {{item.Op_importe}}</td>
-            <td class="px-3 py-2 whitespace-nowrap text-[0.4rem] text-gray-500 w-[10%]">{{item.Fechapago}}</td>
+            <td class="px-1 py-2 whitespace-nowrap text-[0.5rem] text-cyan-600 font-semibold w-[10%]">{{ item.OrdenPago }}</td>
+            <td class="px-1 py-2 whitespace-nowrap text-[0.5rem] text-gray-500 w-[20%]">{{item.FechaCargaReceta | date:'dd/MM/yyyy'}}</td>
+            <td class="px-1 py-2 whitespace-nowrap text-[0.5rem] text-gray-500 w-[20%]">{{item.DescripcionReintegro}}</td>
+            <td class="px-1 py-2 whitespace-nowrap text-[0.5rem] text-gray-500 w-[10%]">{{item.Op_estado}}</td>
+            <td class="px-1 py-2 whitespace-nowrap text-[0.5rem] text-gray-500 w-[10%]">$ {{item.Op_importe}}</td>
+            <td class="px-1 py-2 whitespace-nowrap text-[0.5rem] text-gray-500 w-[20%]">{{item.Fechapago | date:'dd/MM/yyyy'}}</td>
           </tr>
         </tbody>
       </table>
