--- a/src/app/admin/components/grupo-familiar/grupo-familiar.component.html
+++ b/src/app/admin/components/grupo-familiar/grupo-familiar.component.html
@@ -1,5 +1,5 @@
-
-<div class="flex flex-col h-28  overflow-hidden mx-1 mt-2">
+<ng-container *ngIf="familia; else elseTemplate">
+  <div class="flex flex-col h-28  overflow-hidden mx-1 mt-2">
   <div class="overflow-y-auto flex-grow custom-scrollbar">
     <table class="min-w-full divide-y divide-gray-200">
       <thead class="bg-gray-50 sticky top-0 z-10">
@@ -31,4 +31,10 @@
     </table>
   </div>
 </div>
+</ng-container>
+<ng-template #elseTemplate>
+  <p class="text-gray-400">Sin datos</p>
+</ng-template>
+
+
 
