changed in the front animation

--- a/src/app/admin/components/adherirse/adherirse.component.html
+++ b/src/app/admin/components/adherirse/adherirse.component.html
@@ -1,7 +1,6 @@
-<div class="flex flex-col justify-center items-center w-full px-5 h-26 text-center">
-  <p class="text-xs text-gray-500">Actualmente no se encuentra adherido a este servicio.</p>
-  <p class="text-xs text-gray-500">Desea contratarlo?</p>
-  <a href="https://wa.me/+5491126526532?text=hola soy y socio deseo adherirme a un servicio de la mutual">
-    <button class="text-white bg-accent rounded-2xl px-2 py-1 mt-3">Adherirme</button>
+<div class="flex flex-col justify-center items-center w-full px-5 h-26 text-center mt-3">
+  <p class="text-xs text-gray-400">Actualmente no se encuentra adherido a este servicio.</p>
+  <a href="https://wa.me/+5491126526532?text=hola deseo adherirme a un servicio de la mutual">
+    <button class="text-white text-xs bg-accent rounded-2xl px-2 py-1 mt-3">Adherirme</button>
   </a>
 </div>
