--- a/src/app/admin/components/farmacia/farmacia.component.html
+++ b/src/app/admin/components/farmacia/farmacia.component.html
@@ -2,28 +2,28 @@
   <app-adherirse></app-adherirse>
 </ng-container>
 <ng-template #elseTemplate>
-  <p class="text-[0.7rem] text-cyan-700 font-semibold text-center mt-1">Reintegro de farmacia </p>
+  <p class="text-[0.7rem] text-cyan-600 font-semibold text-center mt-1">Reintegro de farmacia </p>
   <div class="flex flex-col h-24  overflow-hidden mx-1 mt-1 mb-2">
     <div class="overflow-y-auto flex-grow custom-scrollbar">
       <table class="min-w-full divide-y divide-gray-200">
         <thead class="bg-gray-50 sticky top-0 z-10">
           <tr>
-            <th scope="col" class="px-1 py-2 text-left font-semibold text-[0.3rem]  w-[20%] text-gray-500 uppercase tracking-wider">
+            <th scope="col" class="px-1 py-2 text-left font-semibold text-[0.3rem]  w-[20%] text-cyan-600 uppercase tracking-wider">
               ORDEN DE PAGO
             </th>
-            <th scope="col" class="px-1 py-2 text-left font-semibold text-[0.3rem]  w-[30%] text-gray-500 uppercase tracking-wider">
+            <th scope="col" class="px-1 py-2 text-left font-semibold text-[0.3rem]  w-[30%] text-cyan-600 uppercase tracking-wider">
               FECHA DE CARGA RECETA
             </th>
-            <th scope="col" class="px-1 py-2 text-left font-semibold text-[0.3rem]  w-[20%] text-gray-500 uppercase tracking-wider">
+            <th scope="col" class="px-1 py-2 text-left font-semibold text-[0.3rem]  w-[20%] text-cyan-600 uppercase tracking-wider">
               DESCRIPCION
             </th>
-            <th scope="col" class="px-1 py-2 text-left font-semibold text-[0.3rem]  w-[10%] text-gray-500 uppercase tracking-wider">
+            <th scope="col" class="px-1 py-2 text-left font-semibold text-[0.3rem]  w-[10%] text-cyan-600 uppercase tracking-wider">
               ESTADO
             </th>
-            <th scope="col" class="px-1 py-2 text-left font-semibold text-[0.3rem]  w-[10%] text-gray-500 uppercase tracking-wider">
+            <th scope="col" class="px-1 py-2 text-left font-semibold text-[0.3rem]  w-[10%] text-cyan-600 uppercase tracking-wider">
               IMPORTE
             </th>
-            <th scope="col" class="px-1 py-2 text-left font-semibold text-[0.3rem]  w-[30%] text-gray-500 uppercase tracking-wider">
+            <th scope="col" class="px-1 py-2 text-left font-semibold text-[0.3rem]  w-[30%] text-cyan-600 uppercase tracking-wider">
               FECHA DE PAGO
             </th>
 
