--- a/src/app/admin/components/sepelio/sepelio.component.html
+++ b/src/app/admin/components/sepelio/sepelio.component.html
@@ -1,5 +1,5 @@
-<ng-container *ngIf="user()?.Beneficios![0].SeguroVida || user()?.Beneficios![0].SeguroSepelio ; else elseTemplate">
-  <p class="text-[0.7rem] text-cyan-700 font-semibold text-center mt-1">Seguros</p>
+<ng-container *ngIf="user()?.Beneficios?.length !==0; else elseTemplate">
+  <p class="text-[0.7rem] text-cyan-600 font-semibold text-center mt-1">Seguros</p>
 <div class="flex flex-col h-24  overflow-hidden mx-4 mt-1 mb-2">
   <div class="overflow-y-auto flex-grow custom-scrollbar">
     <table class="min-w-full divide-y divide-gray-200">
