--- a/src/app/admin/pages/credencial/credencial.component.html
+++ b/src/app/admin/pages/credencial/credencial.component.html
@@ -1,4 +1,16 @@
 
+<div class="flex justify-end mb-5">
+  @if(autService.authStatus() === 'authenticated'){
+
+  }
+  <button
+  routerLink="../login"
+  class="bg-cyan-600 text-white px-4 py-1 rounded-2xl font-semibold cursor-pointer"
+  (click)="autService.logout()"
+  >Salir</button>
+</div>
+
+
 <div class="overflow-hidden">
   <div class="flex flex-col items-center justify-center mt-5 mb-10 transform scale-100 md:scale-150 lg:scale-150 origin-top-center md:mt-20 lg:mt-20 md:mb-30 lg:mb-30">
     <div class="[perspective:1000px]">
@@ -284,6 +296,10 @@
     </div>
   </div>
 </div>
+<div class="flex justify-center">
+  <app-install-button></app-install-button>
+</div>
+
 
 
 
