--- a/src/app/admin/components/grupo-familiar/grupo-familiar.component.html
+++ b/src/app/admin/components/grupo-familiar/grupo-familiar.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="user()?.Beneficios?.length !==0; else elseTemplate">
+<ng-container *ngIf="user()?.GpoFamiliar?.length !== 0; else elseTemplate">
   <div class="flex flex-col h-28  overflow-hidden mx-1 mt-2">
   <div class="overflow-y-auto flex-grow custom-scrollbar">
     <table class="min-w-full divide-y divide-gray-200">
